@@ -14,6 +14,8 @@ umask 002
 SENTINEL_OVERLAY_ETC="/opt/sentinel-etc-overlay"
 SENTINEL_OVERLAY="/opt/sentinel-overlay"
 
+export KARAF_OPTS="-Djava.locale.providers=CLDR,COMPAT"
+
 # Error codes
 E_ILLEGAL_ARGS=126
 
